--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="masthead-subheading"></div>
                 <div class="masthead-heading text-uppercase"></div>
-                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Click Here</a>
             </div>
         </header>
         <!-- Services-->
