--- a/index.html
+++ b/index.html
@@ -54,24 +54,24 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Rupa-Rupa</h4>
-                        <p class="text-muted">Belanja enak tanpa perlu keluar rumah unch unch</p>
+                        <h4 class="my-3">E-commerce</h4>
+                        <p class="text-muted">Kami menyediakan Transaksi di rupa-rupa.com tanpa melakukan antrian anda bisa bawa pulang barang belanjaan anda dengan membayar transaksi menggunakan virtual account anda </p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Member Ace</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">E-Brochure</h4>
+                        <p class="text-muted">Selalu segar dan tetap akrif, gunakan masker setiap keluar rumah jaga daya tahan tubuh. kami menyediakan promo menarik tiap bulannya silahkan klik link berikut agar anda tidak melewati promo yang sedang berlangsung </p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Web Security</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Whatsapp Store</h4>
+                        <p class="text-muted">Untuk Pemesanan kami menerima pesanan via Whatsapp dan kami juga bersedia mengantarkan barang belajaan anda dengan syarat dan ketentuan berlaku, stay safe dan selamat berbelaja </p>
                     </div>
                 </div>
             </div>
@@ -80,7 +80,7 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Portfolio</h2>
+                    <h2 class="section-heading text-uppercase">PRODUCT CATEGORY</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="row">
@@ -90,11 +90,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/homelivin.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Automotiv</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-heading">Homeware</div>
+                                <div class="portfolio-caption-subheading text-muted">Kebutuhan Rumah tangga</div>
                             </div>
                         </div>
                     </div>
@@ -104,11 +104,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/appppp.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Appliances</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                                <div class="portfolio-caption-subheading text-muted">Peralatan Elektronik</div>
                             </div>
                         </div>
                     </div>
@@ -300,18 +300,18 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01-full.jpg" alt="" />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <h2 class="text-uppercase">Homeware</h2>
+                                    <p class="item-intro text-muted">Menyediakan Semua Kebutuhan Rumah Anda.</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/homelivin.jpg" alt="" />
+                                    <p>Suasana rumah yang bersih, nyaman dan indah bisa memberikan manfaat rileks bagi pikiran Anda. Wujudkan hal tersebut lewat koleksi dekorasi rumah hingga tekstil yang cantik dari ACE Hardware.</p>
                                     <ul class="list-inline">
-                                        <li>Date: January 2020</li>
-                                        <li>Client: Threads</li>
-                                        <li>Category: Illustration</li>
+                                        <li> </li>
+                                        <li> </li>
+                                        <li> </li>
                                     </ul>
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
-                                        Close Project
+                                        Close 
                                     </button>
                                 </div>
                             </div>
@@ -332,8 +332,8 @@
                                     <!-- Project Details Go Here-->
                                     <h2 class="text-uppercase">Project Name</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/02-full.jpg" alt="" />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/appppp.jpg" alt="" />
+                                    <p>Berbagai jenis alat elektronik dapur, pembersih, rumah tangga, elektronik kantor hingga alat kecantikan tersedia di ACE. Termasuk perangkat CCTV, audio video dan kipas angin.</p>
                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
                                         <li>Client: Explore</li>
