--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Product</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                     </ul>
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">hubungi kami </h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -55,7 +55,7 @@
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">E-commerce</h4>
-                        <p class="text-muted">Kami menyediakan Transaksi di rupa-rupa.com tanpa melakukan antrian anda bisa bawa pulang barang belanjaan anda dengan membayar transaksi menggunakan virtual account anda </p>
+                        <p class="text-muted"></p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -63,7 +63,7 @@
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">E-Brochure</h4>
-                        <p class="text-muted">Selalu segar dan tetap akrif, gunakan masker setiap keluar rumah jaga daya tahan tubuh. kami menyediakan promo menarik tiap bulannya silahkan klik link berikut agar anda tidak melewati promo yang sedang berlangsung </p>
+                        <p class="text-muted"></p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -71,7 +71,7 @@
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Whatsapp Store</h4>
-                        <p class="text-muted">Untuk Pemesanan kami menerima pesanan via Whatsapp dan kami juga bersedia mengantarkan barang belajaan anda dengan syarat dan ketentuan berlaku, stay safe dan selamat berbelaja </p>
+                        <p class="text-muted"></p>
                     </div>
                 </div>
             </div>
@@ -278,9 +278,12 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-left">Copyright © @debby_trisandi</div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-whatsapp"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-store"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-instagram"></i></a>
+
                     </div>
                     <div class="col-lg-4 text-lg-right">
                         <a class="mr-3" href="#!">Privacy Policy</a>
