--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">PRODUCT CATEGORY</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -55,7 +55,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/homelivin.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/table.png" alt="" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Homeware</div>
