--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
-                                Be Part
+                                
                                 <br />
-                                Of Our
+                                ACE
                                 <br />
-                                Story!
+                                HELPFUL
                             </h4>
                         </div>
                     </li>
