--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
          <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Services</h2>
+                    <h2 class="section-heading text-uppercase" >Services</h2>
                     <h3 class="section-subheading text-muted">hubungi kami </h3>
                 </div>
                 <div class="row text-center">
@@ -149,7 +149,7 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">E-commerce</h4>
+                        <h4 class="my-3" href="https://www.ruparupa.com/ace/?utm_source=acehardware.co.id&utm_medium=referral&utm_content=buy+now+button&utm_campaign=button">E-commerce</h4>
                         <p class="text-muted"></p>
                     </div>
                     <div class="col-md-4">
@@ -193,11 +193,10 @@
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
-                                
-                                <br />
                                 ACE
                                 <br />
-                                HELPFUL
+
+                                HELPFULL
                             </h4>
                         </div>
                     </li>
@@ -251,7 +250,6 @@
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="https://bit.ly/Wa_ACEGPS"><i class="fab fa-whatsapp"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-store"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/acegreenpramuka?igshid=gu76u70374"><i class="fab fa-instagram"></i></a>
 
