--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse" href="https://www.ruparupa.com/ace/?utm_source=acehardware.co.id&utm_medium=referral&utm_content=buy+now+button&utm_campaign=button"></i>
                         </span>
-                        <h4 class="my-3" href="https://www.ruparupa.com/ace/?utm_source=acehardware.co.id&utm_medium=referral&utm_content=buy+now+button&utm_campaign=button">E-commerce</h4>
+                        <h4 class="my-3" >E-commerce</h4>
                         <p class="text-muted"></p>
                     </div>
                     <div class="col-md-4">
