--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/homelivin.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Homeware</div>
+                                <div onclick="window.location.href='https://www.ruparupa.com/ace/home-living/'"class="portfolio-caption-heading">Homeware</div>
                                 <div class="portfolio-caption-subheading text-muted"></div>
                             </div>
                         </div>
@@ -72,7 +72,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/appppp.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Appliances</div>
+                                <div onclick="window.location.href='https://www.ruparupa.com/ace/peralatan-elektronik'"class="portfolio-caption-heading">Appliances</div>
                                 <div class="portfolio-caption-subheading text-muted"></div>
                             </div>
                         </div>
@@ -86,7 +86,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/kebersihan.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Peralatan Kebersihan</div>
+                                <div onclick="window.location.href='https://www.ruparupa.com/ace/peralatan-kebersihan'"class="portfolio-caption-heading">Peralatan Kebersihan</div>
                                 <div class="portfolio-caption-subheading text-muted"></div>
                             </div>
                         </div>
@@ -100,7 +100,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/otomotif.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Otomotif</div>
+                                <div onclick="window.location.href='https://www.ruparupa.com/ace/otomotif.'"class="portfolio-caption-heading">Otomotif</div>
                                 <div class="portfolio-caption-subheading text-muted"></div>
                             </div>
                         </div>
@@ -114,7 +114,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/lampu.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Lighting</div>
+                                <div onclick="window.location.href='https://www.ruparupa.com/ace/lampu-dan-bohlam'"class="portfolio-caption-heading">Lighting</div>
                                 <div class="portfolio-caption-subheading text-muted"></div>
                             </div>
                         </div>
@@ -128,7 +128,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/dapur.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Kitchenware</div>
+                                <div onclick="window.location.href='https://www.ruparupa.com/ace/dapur'"class="portfolio-caption-heading">Dapur</div>
                                 <div class="portfolio-caption-subheading text-muted"></div>
                             </div>
                         </div>
@@ -142,7 +142,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/paint.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Home Improvement</div>
+                                <div onclick="window.location.href='https://www.ruparupa.com/ace/home-improvement.'"class="portfolio-caption-heading">Home Improvement</div>
                                 <div class="portfolio-caption-subheading text-muted"></div>
                             </div>
                         </div>
@@ -156,7 +156,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/hobby.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Hobi & Gaya Hidup</div>
+                                <div onclick="window.location.href='https://www.ruparupa.com/ace/hobi-dan-gaya-hidup.'"class="portfolio-caption-heading">Hobi & Gaya Hidup</div>
                                 <div class="portfolio-caption-subheading text-muted"></div>
                             </div>
                         </div>
@@ -169,7 +169,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/olahraga.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Olahraga & Outdoor</div>
+                                <div onclick="window.location.href='https://www.ruparupa.com/ace/olah-raga-dan-outdoor.''"class="portfolio-caption-heading">Olahraga & Outdoor</div>
                                 <div class="portfolio-caption-subheading text-muted"></div>
                             </div>
                         </div>
@@ -232,13 +232,12 @@
                     </li>
                    
                     <li class="timeline-inverted">
-                        <div class="timeline-image">
+                        <div onclick="window.location.href='https://g.page/ACEGPS?share'"class="timeline-image">
                             <h4>
-                                ACE
+                                LOKASI
                                 <br />
-
-                                HELPFULL
-                            </h4>
+                                STORE
+                               </h4>
                         </div>
                     </li>
                 </ul>
