--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/otomotif.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div onclick="window.location.href='https://www.ruparupa.com/ace/otomotif.'"class="portfolio-caption-heading">Otomotif</div>
+                                <div onclick="window.location.href='https://www.ruparupa.com/ace/otomotif'"class="portfolio-caption-heading">Otomotif</div>
                                 <div class="portfolio-caption-subheading text-muted"></div>
                             </div>
                         </div>
