--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/paint.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div onclick="window.location.href='https://www.ruparupa.com/ace/home-improvement.'"class="portfolio-caption-heading">Home Improvement</div>
+                                <div onclick="window.location.href='https://www.ruparupa.com/ace/home-improvement'"class="portfolio-caption-heading">Home Improvement</div>
                                 <div class="portfolio-caption-subheading text-muted"></div>
                             </div>
                         </div>
@@ -156,7 +156,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/hobby.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div onclick="window.location.href='https://www.ruparupa.com/ace/hobi-dan-gaya-hidup.'"class="portfolio-caption-heading">Hobi & Gaya Hidup</div>
+                                <div onclick="window.location.href='https://www.ruparupa.com/ace/hobi-dan-gaya-hidup'"class="portfolio-caption-heading">Hobi & Gaya Hidup</div>
                                 <div class="portfolio-caption-subheading text-muted"></div>
                             </div>
                         </div>
@@ -169,7 +169,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/olahraga.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div onclick="window.location.href='https://www.ruparupa.com/ace/olah-raga-dan-outdoor.''"class="portfolio-caption-heading">Olahraga & Outdoor</div>
+                                <div onclick="window.location.href='https://www.ruparupa.com/ace/olah-raga-dan-outdoor''"class="portfolio-caption-heading">Olahraga & Outdoor</div>
                                 <div class="portfolio-caption-subheading text-muted"></div>
                             </div>
                         </div>
