--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <h4 class="my-3" >E-commerce</h4>
                         <p class="text-muted"></p>
                     </div>
-                    <div onclick="window.location.href='https://drive.google.com/file/d/1iMRCfTA8q-LZdY4aNkJHO_lE6SVnYzwQ/view'" class="col-md-4" >
+                    <div onclick="window.location.href='https://www.acehardware.co.id/emagz/Vol14-Z1'" class="col-md-4" >
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
