--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-left">Copyright © @debby_trisandi</div>
+                    <div class="col-lg-4 text-lg-left">Copyright © Ace Green Pramuka</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="https://bit.ly/Wa_ACEGPS"><i class="fab fa-whatsapp"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
